<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".GameListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/stickyIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sticky_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/stickyIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bt_players_list"
            style="@style/btnNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list"
            android:contentDescription="@string/hint_player_list"
            android:tooltipText="@string/hint_player_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/newGameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_new_game"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameTv">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterNameEt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_enter_game_name"
            android:inputType="textCapSentences"
            android:maxLength="25"
            android:textColor="@color/btn_text"
            android:textColorHint="#50000000" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addGameBt"
            style="@style/btnStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/start_game"
            android:drawablePadding="8dp"
            android:text="@string/bt_new_game" />
    </LinearLayout>

    <TextView
        android:id="@+id/PlayerListTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:text="Gracze przy stole: Jan Maria-Rokita, Grzegorz Brzęczyszczykiewicz, Tuomas Holopainen, Dawid Myśliwiec." />

    <TextView
        android:id="@+id/GamesPlayedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_games_played"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayerListTv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GamesPlayedLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>