<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".PlayerListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/stickyIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sticky_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_loading"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/stickyIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bt_back"
            style="@style/btnNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hint_player_list"
            android:src="@drawable/back"
            android:tooltipText="@string/hint_leave_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/hint_score_table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelEnterRoundScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="0dp"
                android:text="@string/label_score_current_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_drag_and_drop"
                android:paddingBottom="8dp"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelEnterRoundScore" />
            
            <RelativeLayout
                android:id="@+id/secondRecyclerViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelBar2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playerScoreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </androidx.recyclerview.widget.RecyclerView>

                <ProgressBar
                    android:id="@+id/loadingProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="16dp"
                    />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonsPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondRecyclerViewContainer">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRoundName"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btEndGame"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/btn_text"
                    android:textColorHint="#50000000"
                    android:maxLength="25"
                    android:inputType="textCapSentences"
                    android:gravity="start"
                    android:layout_marginEnd="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btEndGame"
                    android:visibility="gone"
                    style="@style/btnStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_end_game"
                    app:layout_constraintEnd_toStartOf="@id/btSave"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSave"
                    android:visibility="gone"
                    style="@style/btnStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/labelBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/label_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonsPanel" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scoreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelBar3">
            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>